--- a/src/main/resources/assets/respawneye/lang/zh_cn.json
+++ b/src/main/resources/assets/respawneye/lang/zh_cn.json
@@ -1,6 +1,8 @@
 {
   "modmenu.descriptionTranslation.respawneye": "重生之眼，一个专注于神话生物的模组",
   "modmenu.nameTranslation.respawneye": "重生之眼",
+  "modmenu.modrinth": "Modrinth",
+  "modmenu.curseforge": "CurseForge",
 
   "ig.respawneye.item": "重生之眼 | 物品",
   "ig.respawneye.block": "重生之眼 | 方块",
