添加绿宝石工具

--- a/src/main/resources/assets/respawneye/lang/en_us.json
+++ b/src/main/resources/assets/respawneye/lang/en_us.json
@@ -66,6 +66,11 @@
   "item.respawneye.ultimate_hoe": "The Ultimate Hoe",
   "item.respawneye.ultimate_sword": "The Ultimate Sword",
   "item.respawneye.raw_tigers_eye": "Raw Tiger's Eye",
+  "item.respawneye.emerald_axe": "Emerald Axe",
+  "item.respawneye.emerald_pickaxe": "Emerald Pickaxe",
+  "item.respawneye.emerald_shovel": "Emerald Shovel",
+  "item.respawneye.emerald_hoe": "Emerald Hoe",
+  "item.respawneye.emerald_sword": "Emerald Sword",
 
   "block.respawneye.ruby_ore": "Ruby Ore",
   "block.respawneye.deepslate_ruby_ore": "Deepslate Ruby Ore",
