--- a/src/main/resources/assets/respawneye/lang/zh_cn.json
+++ b/src/main/resources/assets/respawneye/lang/zh_cn.json
@@ -66,6 +66,11 @@
   "item.respawneye.ultimate_hoe": "极限锄",
   "item.respawneye.ultimate_sword": "极限剑",
   "item.respawneye.raw_tigers_eye": "粗虎眼石",
+  "item.respawneye.emerald_axe": "绿宝石斧",
+  "item.respawneye.emerald_pickaxe": "绿宝石镐",
+  "item.respawneye.emerald_shovel": "绿宝石铲",
+  "item.respawneye.emerald_hoe": "绿宝石锄",
+  "item.respawneye.emerald_sword": "绿宝石剑",
 
   "block.respawneye.ruby_ore": "红宝石矿石",
   "block.respawneye.deepslate_ruby_ore": "深层红宝石矿石",
