添加绿宝石盔甲及其配方

--- a/src/main/resources/assets/respawneye/lang/en_us.json
+++ b/src/main/resources/assets/respawneye/lang/en_us.json
@@ -71,6 +71,10 @@
   "item.respawneye.emerald_shovel": "Emerald Shovel",
   "item.respawneye.emerald_hoe": "Emerald Hoe",
   "item.respawneye.emerald_sword": "Emerald Sword",
+  "item.respawneye.emerald_helmet": "Emerald Helmet",
+  "item.respawneye.emerald_chestplate": "Emerald Chestplate",
+  "item.respawneye.emerald_leggings": "Emerald Leggings",
+  "item.respawneye.emerald_boots": "Emerald Boots",
 
   "block.respawneye.ruby_ore": "Ruby Ore",
   "block.respawneye.deepslate_ruby_ore": "Deepslate Ruby Ore",
