更新fabric.mod.jsom

--- a/src/main/resources/assets/respawneye/lang/en_us.json
+++ b/src/main/resources/assets/respawneye/lang/en_us.json
@@ -3,6 +3,7 @@
   "modmenu.nameTranslation.respawneye": "RespawnEye",
   "modmenu.modrinth": "Modrinth",
   "modmenu.curseforge": "CurseForge",
+  "modmenu.bilibili": "Bilibili",
 
   "ig.respawneye.item": "RespawnEye | Items",
   "ig.respawneye.block": "RespawnEye | Blocks",
