--- a/src/main/resources/assets/respawneye/lang/zh_cn.json
+++ b/src/main/resources/assets/respawneye/lang/zh_cn.json
@@ -3,6 +3,7 @@
   "modmenu.nameTranslation.respawneye": "重生之眼",
   "modmenu.modrinth": "Modrinth",
   "modmenu.curseforge": "CurseForge",
+  "modmenu.bilibili": "哔哩哔哩",
 
   "ig.respawneye.item": "重生之眼 | 物品",
   "ig.respawneye.block": "重生之眼 | 方块",
