添加Ultimate Bow（但是不起作用）

--- a/src/main/resources/assets/respawneye/lang/en_us.json
+++ b/src/main/resources/assets/respawneye/lang/en_us.json
@@ -66,6 +66,7 @@
   "item.respawneye.ultimate_shovel": "The Ultimate Shovel",
   "item.respawneye.ultimate_hoe": "The Ultimate Hoe",
   "item.respawneye.ultimate_sword": "The Ultimate Sword",
+  "item.respawneye.ultimate_bow": "The Ultimate Bow",
   "item.respawneye.raw_tigers_eye": "Raw Tiger's Eye",
   "item.respawneye.emerald_axe": "Emerald Axe",
   "item.respawneye.emerald_pickaxe": "Emerald Pickaxe",
