--- a/src/main/resources/assets/respawneye/lang/zh_cn.json
+++ b/src/main/resources/assets/respawneye/lang/zh_cn.json
@@ -66,6 +66,7 @@
   "item.respawneye.ultimate_shovel": "极限铲",
   "item.respawneye.ultimate_hoe": "极限锄",
   "item.respawneye.ultimate_sword": "极限剑",
+  "item.respawneye.ultimate_bow": "极限弓",
   "item.respawneye.raw_tigers_eye": "粗虎眼石",
   "item.respawneye.emerald_axe": "绿宝石斧",
   "item.respawneye.emerald_pickaxe": "绿宝石镐",
