添加玫瑰剑

--- a/src/main/resources/assets/respawneye/lang/zh_cn.json
+++ b/src/main/resources/assets/respawneye/lang/zh_cn.json
@@ -77,6 +77,7 @@
   "item.respawneye.emerald_chestplate": "绿宝石胸甲",
   "item.respawneye.emerald_leggings": "绿宝石护腿",
   "item.respawneye.emerald_boots": "绿宝石靴子",
+  "item.respawneye.rose_sword": "玫瑰剑",
 
   "block.respawneye.ruby_ore": "红宝石矿石",
   "block.respawneye.deepslate_ruby_ore": "深层红宝石矿石",
