--- a/src/main/resources/assets/respawneye/lang/en_us.json
+++ b/src/main/resources/assets/respawneye/lang/en_us.json
@@ -77,6 +77,7 @@
   "item.respawneye.emerald_chestplate": "Emerald Chestplate",
   "item.respawneye.emerald_leggings": "Emerald Leggings",
   "item.respawneye.emerald_boots": "Emerald Boots",
+  "item.respawneye.rose_sword": "Rose Sword",
 
   "block.respawneye.ruby_ore": "Ruby Ore",
   "block.respawneye.deepslate_ruby_ore": "Deepslate Ruby Ore",
