添加Mobzilla鳞片盔甲及其语言翻译

--- a/src/main/resources/assets/respawneye/lang/en_us.json
+++ b/src/main/resources/assets/respawneye/lang/en_us.json
@@ -80,6 +80,10 @@
   "item.respawneye.emerald_boots": "Emerald Boots",
   "item.respawneye.rose_sword": "Rose Sword",
   "item.respawneye.ant_spawn_egg": "Ant Spawn Egg",
+  "item.respawneye.mobzilla_helmet": "Mobzilla Scale Helmet",
+  "item.respawneye.mobzilla_chestplate": "Mobzilla Scale Chestplate",
+  "item.respawneye.mobzilla_leggings": "Mobzilla Scale Leggings",
+  "item.respawneye.mobzilla_boots": "Mobzilla Scale Boots",
 
   "block.respawneye.ruby_ore": "Ruby Ore",
   "block.respawneye.deepslate_ruby_ore": "Deepslate Ruby Ore",
