--- a/src/main/resources/assets/respawneye/lang/zh_cn.json
+++ b/src/main/resources/assets/respawneye/lang/zh_cn.json
@@ -80,6 +80,10 @@
   "item.respawneye.emerald_boots": "绿宝石靴子",
   "item.respawneye.rose_sword": "玫瑰剑",
   "item.respawneye.ant_spawn_egg": "蚂蚁刷怪蛋",
+  "item.respawneye.mobzilla_helmet": "Mobzilla鳞片之盔",
+  "item.respawneye.mobzilla_chestplate": "Mobzilla鳞片之甲",
+  "item.respawneye.mobzilla_leggings": "Mobzilla鳞片之腿",
+  "item.respawneye.mobzilla_boots": "Mobzilla鳞片之靴",
 
   "block.respawneye.ruby_ore": "红宝石矿石",
   "block.respawneye.deepslate_ruby_ore": "深层红宝石矿石",
